Fix text alignment in post body paragraph

--- a/themes/next/source/css/_custom.styl
+++ b/themes/next/source/css/_custom.styl
@@ -13,7 +13,7 @@ if (hexo-config('darkmode')) {
 
   .post-body {
      p {
-        text-align: "start";
+        text-align: start;
      }  
    }
 
